<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="appName">Spiel</string>
  <string name="appDescription">A flexible, scriptable Android screen reader</string>

  <string name="sendCommandsLabel">Send commands to Spiel</string>
  <string name="sendCommandsDescription">Send commands to perform speech and other actions to the Spiel screen reader</string>

  <!-- Initial welcome message-->
  <string name="welcomeMsg">Welcome to Spiel!</string>

  <!-- On/off and other alerts -->
  <string name="spielOn">Spiel on</string>
  <string name="spielOff">Spiel off</string>
  <string name="screenOff">Screen off</string>
  <string name="landscape">Landscape</string>
  <string name="portrait">Portrait</string>
  <string name="unlocked">Unlocked</string>
  <string name="ringerOff">Ringer off</string>
  <string name="ringerOn">Ringer on</string>
  <string name="ringerVibrate">Ringer vibrate</string>
  <string name="newVoicemail">New voicemail</string>

  <!-- View names and actions -->
  <string name="button">button</string>
  <string name="labeledButton">%1$s: button</string>
  <string name="checkbox">%1$s: checkbox</string>
  <string name="checked">checked</string>
  <string name="disabled">disabled</string>
  <string name="editText">edit text</string>
  <string name="emptyList">empty list</string>
  <string name="item">%1$s: 1 item</string>
  <string name="items">%1$s: %2$s items</string>
  <string name="image">image</string>
  <string name="labeledImage">%1$s: image</string>
  <string name="link">link</string>
  <string name="listItem">%1$s of %2$s</string>
  <string name="listWithItem">list with 1 item</string>
  <string name="listWithItems">list with %1$s items</string>
  <string name="menu">menu</string>
  <string name="menuItem">menu item</string>
  <string name="notChecked">not checked</string>
  <string name="notSelected">not selected</string>
  <string name="password">password</string>
  <string name="radioButton">%1$s: radio button</string>
  <string name="rating">Rating</string>
  <string name="selected">selected</string>
  <string name="tabWidget">%1$s: tab</string>

  <!-- Preferences -->
  <string name="settings">Settings</string>

  <string name="speechTitle">Speech</string>
  <string name="speechEngineTitle">Speech engine</string>
  <string name="systemDefault">System default</string>
  <string name="rateScaleTitle">Rate scale</string>
  <string name="rateScaleSummary">Factor by which default rate should be scaled</string>
  <string name="pitchScaleTitle">Pitch scale</string>
  <string name="pitchScaleSummary">Factor by which default pitch should be scaled</string>
  <string name="echoByCharTitle">Echo by character</string>
  <string name="echoByWordTitle">Echo by word</string>
  <string name="speakNotificationsWhenScreenOffTitle">Speak notifications even when screen is off</string>
  <string name="useBluetoothSCOTitle">Use Bluetooth SCO</string>
  <string name="useBluetoothSCOSummary">Route off-call audio through Bluetooth SCO earpieces (experimental!)</string>
  <string name="managePunctuationSpeechTitle">Manage punctuation speech</string>
  <string name="managePunctuationSpeechSummary">Delegate speaking of some unhandled punctuation to Spiel</string>
  <string name="duckNonSpeechAudioTitle">Duck non-speech audio</string>
  <string name="duckNonSpeechAudioSummary">Lower volume of music, games, etc. while speaking</string>
  <string name="textToSpeechTitle">Text to Speech settings</string>
  <string name="textToSpeechSummary">Set system-wide TTS properties</string>

  <string name="alertsTitle">Alerts</string>
  <string name="talkingCallerIDTitle">Talking caller ID</string>
  <string name="talkingCallerIDSummary">Repeatedly announce caller ID details for incoming calls</string>
  <string name="voicemailAlertsTitle">Voicemail alerts</string>
  <string name="voicemailAlertsSummary">Repeatedly announce availability of new voicemail</string>

  <string name="hapticFeedbackTitle">Haptic feedback</string>
  <string name="hapticFeedbackSummary">Emit vibrations whenever widget boundaries are crossed</string>

  <string name="triggersTitle">Triggers</string>
  <string name="triggersSummary">Set actions to run in response to physical events</string>
  <string name="onShakeTitle">On shake</string>
  <string name="onShakeSummary">Set an action to perform when the device is shaken</string>
  <string name="onProximityNearTitle">On proximity near</string>
  <string name="onProximityNearSummary">Set an action to perform when the proximity sensor determines that something is near</string>

  <string name="notificationFiltersTitle">Notification filters</string>
  <string name="notificationFiltersSummary">Filter presentation of notification changes for noisy apps</string>

  <string name="debuggingTitle">Debugging</string>
  <string name="sendBacktracesTitle">Send backtraces when Spiel crashes</string>
  <string name="sendBacktracesSummary">Automatically send anonymous error reports to the developer whenever Spiel crashes (requires restart)</string>
  <string name="profilingTitle">Profiling</string>
  <string name="profilingSummary">Only enable for development as this impacts performance!</string>

  <string name="events">Events</string>

  <string name="createScriptTemplate">Create script template</string>

  <string name="scripts">Scripts</string>

  <string name="system">System</string>
  <string name="user">User</string>

  <!-- Script context menu -->
  <string name="delete">Delete</string>
  <string name="copyToExternalStorage">Copy to external storage</string>
  <string name="postToBazaar">Post to Bazaar</string>

  <string name="bazaar_credentials">Please enter your Spiel Bazaar credentials below.</string>
  <string name="bazaar_credentials_invalid">Your username and/or password are invalid. Please re-enter them below and try again.</string>
  <string name="bazaar_username_label">Username</string>
  <string name="bazaar_password_label">Password</string>
  <string name="signup">Signup</string>
  <string name="script_reload_error">This script is invalid. Please fix any errors reported in the logs and try again.</string>
  <string name="changes_label">Changes (optional):</string>
  <string name="script_posted">Your script was posted successfully. Thank you for your contribution.</string>
  <string name="script_posting_error">There was a temporary network error posting your script. Please try again later.</string>

  <string name="confirmDelete">Are you sure you wish to delete the script for package %1$s?</string>
  <string name="scriptCopied">Script copied to %1$s.</string>

  <string name="newOrUpdatedScripts">New or updated scripts are available. Please choose which you wish to install.</string>
  <string name="selectAll">Select all</string>
  <string name="deselectAll">Deselect all</string>
  <string name="install">Install</string>

  <!-- Spoken when script changes are detected -->
  <string name="scriptInstalling">Installing %1$s</string>
  <string name="scriptUninstalling">Uninstalling %1$s</string>
  <string name="scriptUpdating">Updating %1$s</string>

  <!-- Menu items -->
  <string name="refresh">Refresh</string>

  <!-- Action names and related -->

  <string name="none">None</string>
  <string name="createScriptTemplateAction">Create a script template for the most recent accessibility event</string>
  <string name="templateCreated">Template created in %1$s.</string>
  <string name="templateCreationError">There was an error creating the script template.</string>
  <string name="stopSpeech">Stop speech</string>
  <string name="toggleSpiel">Toggle whether or not Spiel is enabled</string>

  <!-- Punctuation and other speech-related strings -->

  <string name="blank">blank</string>
  <string name="cap">cap %1$s</string>
  <string name="exclamation">exclaim</string>
  <string name="at">at</string>
  <string name="pound">pound</string>
  <string name="dollar">dollar</string>
  <string name="percent">percent</string>
  <string name="caret">caret</string>
  <string name="ampersand">and</string>
  <string name="asterisk">star</string>
  <string name="leftParen">left paren</string>
  <string name="rightParen">right paren</string>
  <string name="underscore">underscore</string>
  <string name="space">space</string>
  <string name="period">dot</string>
  <string name="comma">comma</string>
  <string name="lessThan">less</string>
  <string name="greaterThan">greater</string>
  <string name="slash">slash</string>
  <string name="backslash">backslash</string>
  <string name="questionMark">question</string>
  <string name="quote">quote</string>
  <string name="apostrophe">apostrophe</string>
  <string name="semiColon">semi colon</string>
  <string name="colon">colon</string>
  <string name="dash">dash</string>
  <string name="plus">plus</string>
  <string name="newline">Newline</string>
  <string name="tab">tab</string>

  <!-- String returned when an unknown number calls. -->
  <string name="unknown">Unknown</string>

  <!-- Granularities -->
  <string name="character">Character</string>
  <string name="word">Word</string>
  <string name="line">Line</string>
  <string name="paragraph">Paragraph</string>
  <string name="page">Page</string>

  <string name="charging">charging</string>

</resources>
