<?xml version="1.0" encoding="utf-8"?>

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

  <header
    android:title="@string/speechTitle"
    android:fragment="info.spielproject.spiel.ui.SpeechPreferenceFragment">
    <extra
      android:name="resource"
      android:value="speech"/>
  </header>

  <header
    android:title="@string/alertsTitle"
    android:fragment="info.spielproject.spiel.ui.AlertsPreferenceFragment">
    <extra
      android:name="resource"
      android:value="alerts"/>
  </header>

  <header
    android:title="@string/notificationFiltersTitle"
    android:summary="@string/notificationFiltersSummary"
    android:fragment="info.spielproject.spiel.ui.NotificationFiltersPreferenceFragment">
  </header>

  <header
    android:title="@string/debuggingTitle"
    android:fragment="info.spielproject.spiel.ui.StockPreferenceFragment">
    <extra
      android:name="resource"
      android:value="debugging"/>
  </header>

</preference-headers>
