<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:text="@string/newOrUpdatedScripts"/>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/selectAll"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/selectAll"/>

    <Button
      android:id="@+id/deselectAll"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/deselectAll"/>

  </LinearLayout>

  <ListView
    android:id="@+id/scripts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:nextFocusDown="@+id/install"/>

  <LinearLayout
  android:orientation="horizontal"
  android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
    android:id="@+id/install"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/install"/>

    <Button
    android:id="@+id/cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cancel"/>

  </LinearLayout>

</LinearLayout>
