<?xml version="1.0" encoding="utf-8"?>

<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:stretchColumns="1">
  <TableRow>
    <TextView android:id="@+id/message" android:layout_span="3" android:focusable="true"/>
  </TableRow>
  <TableRow>
    <TextView android:text="@string/bazaar_username_label"/>
    <EditText android:id="@+id/username" android:contentDescription="@+string/bazaar_username_label"/>
  </TableRow>
  <TableRow>
    <TextView android:text="@string/bazaar_password_label"/>
    <EditText android:id="@+id/password" android:contentDescription="@+string/bazaar_password_label" android:password="true" android:nextFocusDown="@+id/ok"/>
  </TableRow>
  <TableRow>
    <Button
      android:id="@+id/ok" 
      android:text="@android:string/ok"/>
    <Button
      android:id="@+id/signup"
      android:text="@string/signup"/>
    <Button
      android:id="@+id/cancel"
      android:text="@android:string/cancel"/>
  </TableRow>
</TableLayout>
